feat: добавил некоторый функционал (пн, 13 марта 2023 г., 02:28)

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -66,5 +66,6 @@
         <img class="acor-img" src="./ugdj9m1ib371vratx1ks.webp" alt="">
     </div> 
 </div>
+<script src="script.js"></script>
 </body>
 </html>
